[tool.poetry]
name = "fdk-asgi"
version = "0.3.0"
description = ""
authors = ["Björn Reetz <git@bjoern-reetz.de>"]
readme = "README.md"
packages = [{include = "fdk_asgi", from = "src"}]

[tool.poetry.scripts]
fdk-asgi-serve = 'fdk_asgi.cli:app'

[tool.poetry.dependencies]
python = ">=3.8"
asgiref = "^3.7.2"
httptools = "^0.6.0"
typer = "^0.9.0"
uvicorn = "^0.24"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
httpx = "^0.25.0"
starlette = "^0.32.0.post1"
pytest-asyncio = "^0.21.1"
python-multipart = "^0.0.6"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # pycodestyle
    "E4", "E7", "E9", "W6",
    # mccabe
    "C90",
    # isort
    "I",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
    # flake8-async
    "ASYNC",
    # flake8-bandit
    "S",
    # flake8-boolean-trap
    "FBT",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-errmsg
    "EM",
    # flake8-logging-format
    "G",
    # flake8-print
    "T20",
    # flake8-pytest-style
    "PT",
    # flake8-simplify
    "SIM",
    # flake8-use-pathlib
    "PTH",
    # eradicate
    "ERA",
    # tryceratops
    "TRY",
    # perflint
    "PERF",
    # Ruff-specific rules
    "RUF",
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.per-file-ignores]
"**/test_*.py" = ["S101"]
"src/fdk_asgi/cli.py" = ["FBT", "ERA001"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
